--- a/serverNew/package.json
+++ b/serverNew/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "main": "dist/server.js",
+  "type": "commonjs",
+
   "scripts": {
     "start": "node dist/server.js",
-    "build": "node_modules/.bin/tsc",
+    "build": "tsc",
     "dev": "ts-node server.ts"
   },
+
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -18,6 +21,7 @@
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1"
   },
+
   "devDependencies": {
     "@types/express": "^5.0.3",
     "ts-node": "^10.9.2",
