--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,16 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/leaflet": "^1.9.20",
+    "@types/react-router-dom": "^5.3.3",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.11",
     "web-vitals": "^2.1.4"
