--- a/serverNew/package.json
+++ b/serverNew/package.json
@@ -11,45 +11,36 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express-session": "^1.18.2",
     "bcrypt": "^6.0.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "^4.21.2",
+    "debug": "^4.3.7",
+    "express": "^4.19.2",
     "express-session": "^1.18.2",
-    "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.18.0",
-    "mongoose": "^8.17.0",
-    "morgan": "^1.10.1"
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
+    "pug": "^3.0.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/express": "^5.0.3",
-    "@types/jest": "^30.0.0",
-    "@types/supertest": "^6.0.3",
-    "jest": "^30.0.5",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/jest": "^29.5.13",
+    "@types/supertest": "^2.0.16",
+    "jest": "^29.7.0",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "roots": [
-      "<rootDir>/tests"
-    ],
-    "testMatch": [
-      "**/*.test.ts"
-    ],
-    "collectCoverageFrom": [
-      "routes/**/*.ts",
-      "models/**/*.ts",
-      "middleware/**/*.ts"
-    ]
+    "roots": ["<rootDir>/tests"],
+    "testMatch": ["**/*.test.ts"],
+    "collectCoverageFrom": ["routes/**/*.ts", "models/**/*.ts", "middleware/**/*.ts"]
   }
 }
