--- a/serverNew/package.json
+++ b/serverNew/package.json
@@ -30,6 +30,7 @@
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.13",
     "@types/supertest": "^2.0.16",
+    "dotenv": "^17.2.1",
     "jest": "^29.7.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.2.5",
@@ -39,8 +40,16 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "roots": ["<rootDir>/tests"],
-    "testMatch": ["**/*.test.ts"],
-    "collectCoverageFrom": ["routes/**/*.ts", "models/**/*.ts", "middleware/**/*.ts"]
+    "roots": [
+      "<rootDir>/tests"
+    ],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "collectCoverageFrom": [
+      "routes/**/*.ts",
+      "models/**/*.ts",
+      "middleware/**/*.ts"
+    ]
   }
 }
