--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "cross-env": "^10.0.0",
     "postcss": "^8.5.6",
     "typescript": "^5.9.2"
   }
