--- a/serverNew/.env
+++ b/serverNew/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://janpppherrmann:XaTo1ON9ac0ZsGHp@coffeeapp.nxw2owg.mongodb.net/?retryWrites=true&w=majority&appName=CoffeeApp
+FRONTEND_URL=http://localhost:5000
