backend unit-Tests hinzugefügt

--- a/serverNew/.env
+++ b/serverNew/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://janpppherrmann:XaTo1ON9ac0ZsGHp@coffeeapp.nxw2owg.mongodb.net/?retryWrites=true&w=majority&appName=CoffeeApp
+
+BACKEND_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:5000
