--- a/serverNew/package.json
+++ b/serverNew/package.json
@@ -14,10 +14,8 @@
     "@playwright/test": "^1.54.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "debug": "^4.3.7",
     "express": "^4.19.2",
-    "express-session": "^1.18.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
@@ -26,16 +24,19 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.13",
     "@types/supertest": "^2.0.16",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "express-session": "^1.18.2",
     "jest": "^29.7.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   },
   "jest": {
